<resources>

    <string name="app_name">CookHelper</string>


    <string-array name="food_category">

        <item></item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Chinese</item>
        <item>All</item>

    </string-array>


    <string-array name="food_type">

        <item></item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Dessert</item>
        <item>Snack</item>
        <item>Any</item>

    </string-array>


    <!-- Ingredients -->

    <string-array name="ingredients_names">

        <item>Butter</item>

        <item>Onion</item>

        <item>Garlic</item>

        <item>Heavy Cream</item>


    </string-array>


    <!-- Ingredient Photos -->

    <array name="ingredients_photos">

        <item>@drawable/salt</item>

        <item>@drawable/sugar</item>

        <item>@drawable/oliveoil</item>

    </array>


    <!-- Directions -->

    <string-array name="directions_names">

        <item>Preheat oven to 375 degrees F (190 degrees C).</item>

        <item>Melt a few tablespoons of butter in a skillet over medium heat. Stir in onion and garlic, and cook slowly until the onion caramelizes to a dark brown, about 15 minutes.</item>

        <item>Meanwhile melt the remaining butter in a saucepan over medium-high heat along with the tomato sauce, heavy cream, salt, cayenne pepper, and garam masala. Bring to a simmer, then reduce heat to medium-low; cover, and simmer for 30 minutes, stirring occasionally. Then stir in caramelized onions.</item>

    </string-array>


    <!-- Ingredient Photos -->

    <array name="directions_photos">

        <item>@drawable/one</item>

        <item>@drawable/two</item>

        <item>@drawable/two</item>

    </array>


    <!-- Search Items names -->

    <string-array name="search_names">

        <item>Salmon</item>

        <item>Chicken Stew</item>

        <item>Pancakes</item>

        <item>Salad</item>

        <item>Tacos</item>

        <item>Pizza</item>


    </string-array>

    <string-array name="unit_measurement">

        <item></item>
        <item>g</item>
        <item>kg</item>
        <item>mL</item>
        <item>L</item>
        <item>tsp(s)</item>
        <item>Tbsp(s)</item>
        <item>C</item>

    </string-array>

    <!-- Search Items Photos -->

    <array name="search_photos">

        <item>@drawable/salmon</item>

        <item>@drawable/chickenstew</item>

        <item>@drawable/pancakes</item>

        <item>@drawable/salad</item>

        <item>@drawable/tacos</item>

        <item>@drawable/pizza</item>

    </array>
    <string name="title_activity_saved_recipes">SavedRecipesActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="viewRecipe">View Recipe</string>
    <string name="clearSearch">Clear Search</string>
    <string name="findRecipe">Find A Recipe</string>
    <string name="category">Select A Category</string>
    <string name="type">Select Type:</string>
    <string name="enterIngredients">Enter an ingredient</string>
    <string name="account">Account Info:</string>
    <string name="accountUsername">Username:</string>
    <string name="changePassword">Change Password:</string>
    <string name="OldPassword">Enter Old Password:</string>
    <string name="newPassword">Enter New Password:</string>
    <string name="reenter_password">Reenter New Password:</string>
    <string name="confirmChange">Confirm New Password</string>
    <string name="HelpLink">Help</string>
    <string name="HelpLink2">\@string/HelpLink</string>
    <string name="Help_main">Help - Login / Registration</string>
    <string name="Help_main_s1">Login</string>
    <string name="Help_main_s1_data">In order to access your recipes you must first log-in to your account. Enter your username in the first field aptly title \"Username\". Afterwards enter your password into the second field titled \"Password\". Once you have entered the correct credentials you will gain access to your user pages where you can view/create/edit recipes, and change your password.</string>
    <string name="Help_main_s2">Registration</string>
    <string name="Help_main_s2_data">In order to be able to login to your account you must first register for an account. Click on the green button labeled Registration. It will take you to a window with three text boxes and a button. In the first textbox title \"Username\", enter your desired username. This will be used to uniquely identify users. In the second field titled \"Password\", enter your desired password. In the third field titled \"Re-type Password\" enter the same password you typed eariler. This step is to ensure you properly typed your password. Once you are happy with your credentials click the green \"Submit\" button. If everything goes correctly you will be able to login with the credentials you just saved.</string>
    >
    <string name="listRecipeName">Recipe Name</string>
    <string name="enterRecipeSteps">Enter the steps to prepare the recipe...</string>
    <string name="cookTime">Cook Time:</string>
    <string name="totalTime">Total Time:</string>
    <string name="calories">Calories:</string>
    <string name="foodCategory">Food Category:</string>
    <string name="foodType">Food Type:</string>
    <string name="prepTime">Prep Time:</string>
    <string name="quantity">Quantity</string>
    <string name="ingredient">Ingredient</string>
    <string name="directions">Directions (Press Here for Fullscreen)</string>
    <string name="serach">Search</string>
    <string name="addIngredient">Add Ingredient</string>
    <string name="searchRecipeName">Search by Recipe Name</string>
    <string name="or">OR</string>
    <string name="noResults">No results to display.</string>
    <string name="enterCookTime">Enter the cook time in minutes</string>
    <string name="enterPrepTime">Enter the prep time in minutes</string>
    <string name="enterRecipeName">Enter the recipe name</string>
    <string name="setDirections">Set Directions</string>
    <string name="confirmSetText">Confirm Text</string>
    <string name="cantUndo">(CANNOT BE UNDONE)</string>
    <string name="delRecipe">Delete Recipe</string>
    <string name="editRecipe">Edit Recipe</string>
    <string name="viewIngredients">View Ingredients</string>
    <string name="longPress">Long Press to Remove Ingredient:</string>
    <string name="removeIngredients">Remove Ingredients</string>
    <string name="confirmDelete">Confirm Changes</string>
    <string name="longPressToManage">Long press recipe to edit/delete</string>>
    <string name="updateRecipe">Update Recipe</string>
    <string name="excludeIngredient">Exclude Ingredient</string>


</resources>