<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ad.nerdsqu.cookhelper.HelpLoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:text="@string/Help_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/HelpMenu"
            android:textSize="30sp"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:text="@string/Help_main_s1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
             />

        <TextView
            android:text="@string/Help_main_s1_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" />

        <TextView
            android:text="@string/Help_main_s2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:layout_marginTop="24dp" />

        <TextView
            android:text="@string/Help_main_s2_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" />

        <Button
            android:text="Back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBack"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</RelativeLayout>
