<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ad.nerdsqu.cookhelper.AddRecipeActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/findRecipe"
            android:id="@+id/tvFindARecipe"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/background_dark">

        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etSearchRecipeName"
            android:hint="@string/searchRecipeName" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_dark"/>

        <TextView
            android:text="@string/or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/background_dark"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20px" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etAddIngredient"
            android:hint="@string/enterIngredients"
            android:layout_centerHorizontal="true" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.25" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_weight="0.2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/category"
                android:id="@+id/tvRecipeList"
                android:layout_alignBottom="@+id/spinCategory"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_weight="0.35" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinCategory"
                android:entries="@array/food_category"
                android:layout_weight="0.3">
            </Spinner>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20px" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.18"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/type"
                android:id="@+id/textView3"
                android:layout_alignBottom="@+id/spinType"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_weight="0.5" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinType"
                android:entries="@array/food_type"
                android:layout_weight="0.3">
            </Spinner>
        </LinearLayout>
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollList"
            android:isScrollContainer="false"
            android:layout_weight="0.28">

        </ScrollView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:text="@string/addIngredient"
                android:id="@+id/bAddSearchIngredient"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5">

            </Button>

            <Button
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:text="@string/serach"
                android:id="@+id/bSearchForRecipe"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5">

            </Button>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
