<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ad.nerdsqu.cookhelper.MyAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:fontFamily="sans-serif"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/myAccount_title" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username_text"
                android:layout_weight="0.06"
                android:text="@string/accountUsername"
                android:textSize="24sp"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/current_user_name"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="46dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/changePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/change_password"
                android:textSize="24sp"
                android:textColor="@android:color/background_dark" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/OldPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/enter_old_password"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="196dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/old_password"
                    android:textAlignment="viewStart" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:text="@string/newPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/enter_new_password"
                    android:layout_weight="0.47" />

                <EditText
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/new_password1"
                    android:textAlignment="viewStart"
                    android:singleLine="false"
                    android:allowUndo="false" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:text="@string/reenter_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/reenter_password"
                    android:layout_weight="0.65" />

                <EditText
                    android:layout_width="189dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/new_password2"
                    android:textAlignment="viewStart" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirm_password_change"
                android:elevation="0dp"
                android:text="@string/confirmChange" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
