<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_recipe_manage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ad.nerdsqu.cookhelper.RecipeManageActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:id="@+id/tvRecipeNameManage"
        android:layout_alignRight="@+id/bEditRecipe"
        android:layout_alignEnd="@+id/bEditRecipe"
        android:layout_alignLeft="@+id/bEditRecipe"
        android:layout_alignStart="@+id/bEditRecipe"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <Button
        android:text="@string/editRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bEditRecipe"
        android:layout_below="@+id/tvRecipeNameManage"
        android:layout_marginTop="75dp"
        android:layout_alignRight="@+id/bDelReicpe"
        android:layout_alignEnd="@+id/bDelReicpe"
        android:layout_alignLeft="@+id/bDelReicpe"
        android:layout_alignStart="@+id/bDelReicpe" />

    <TextView
        android:text="@string/cantUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCantUndo"
        android:textColor="@android:color/holo_red_dark"
        android:layout_below="@+id/bDelReicpe"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/delRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bDelReicpe"
        android:layout_marginTop="118dp"
        android:layout_below="@+id/bEditRecipe"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
