<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/iDUnits"
    android:padding="10dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_weight="0.01" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Add a Recipe"
        android:id="@+id/tVAddARecipe"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/background_dark" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.03" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.25"
        android:contextClickable="false"
        android:background="@drawable/drawable_rectangle">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="1">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.52"
                android:hint="@string/ingredient"
                android:gravity="center_horizontal"
                android:id="@+id/etIngredient" />


            <EditText
                android:layout_width="49dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/etQuantity"
                android:hint="@string/quantity"
                android:gravity="center_horizontal"
                android:layout_weight="0.53" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/unit_measurement"
                android:id="@+id/unitSpinner" />

        </LinearLayout>

        <Space
            android:layout_width="351dp"
            android:layout_height="55dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bAddIngredient"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_weight="0.01"
            android:text="@string/addIngredient" />

    </FrameLayout>

    <Space
        android:layout_width="373dp"
        android:layout_height="20px"
        android:layout_weight="0.15" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.01">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Select the type of meal:"
            android:id="@+id/tVFoodType" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_weight="0.50" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/food_type"
            android:id="@+id/typeSpinner"
            android:layout_weight="0.83" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_weight="0.15" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Select the category of food:"
            android:id="@+id/tVMeal" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_weight="0.55" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/food_category"
            android:id="@+id/categorySpinner"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.01" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.15" />

    <EditText
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etAddDirections"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.01"
        android:hint="@string/enterRecipeSteps" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.17" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.14">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Recipe"
            android:id="@+id/bAddRecipe" />

    </LinearLayout>

</LinearLayout>